--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ web:
      - ./app:/var/www/html/
 
 db:
-  image: mariadb
+  image: mariadb:5.5
   restart: always
   volumes:
     - ./mysql:/var/lib/mysql
